src/glfw/wrapper.nim


proc init*(): cint {.cdecl, importc: "glfwInit", glfwImport.}
proc terminate*() {.cdecl, importc: "glfwTerminate", glfwImport.}
proc getVersion*(major: ptr cint; minor: ptr cint; rev: ptr cint) {.cdecl,
    importc: "glfwGetVersion", glfwImport.}
proc getVersionString*(): cstring {.cdecl, importc: "glfwGetVersionString",
                                    glfwImport.}
proc setErrorCallback*(cbfun: GLFWerrorfun): GLFWerrorfun {.cdecl,
    importc: "glfwSetErrorCallback", glfwImport.}
proc getMonitors*(count: ptr cint): ptr GLFWmonitor {.cdecl,
    importc: "glfwGetMonitors", glfwImport.}
proc getPrimaryMonitor*(): GLFWmonitor {.cdecl,
    importc: "glfwGetPrimaryMonitor", glfwImport.}
proc getMonitorPos*(monitor: GLFWmonitor; xpos: ptr cint; ypos: ptr cint) {.
    cdecl, importc: "glfwGetMonitorPos", glfwImport.}
proc getMonitorPhysicalSize*(monitor: GLFWmonitor; width: ptr cint;
                             height: ptr cint) {.cdecl,
    importc: "glfwGetMonitorPhysicalSize", glfwImport.}
proc getMonitorName*(monitor: GLFWmonitor): cstring {.cdecl,
    importc: "glfwGetMonitorName", glfwImport.}
proc setMonitorCallback*(cbfun: GLFWmonitorfun): GLFWmonitorfun {.cdecl,
    importc: "glfwSetMonitorCallback", glfwImport.}
proc getVideoModes*(monitor: GLFWmonitor; count: ptr cint): ptr GLFWvidmode {.
    cdecl, importc: "glfwGetVideoModes", glfwImport.}
proc getVideoMode*(monitor: GLFWmonitor): ptr GLFWvidmode {.cdecl,
    importc: "glfwGetVideoMode", glfwImport.}
proc setGamma*(monitor: GLFWmonitor; gamma: cfloat) {.cdecl,
    importc: "glfwSetGamma", glfwImport.}
proc getGammaRamp*(monitor: GLFWmonitor): ptr GLFWgammaramp {.cdecl,
    importc: "glfwGetGammaRamp", glfwImport.}
proc setGammaRamp*(monitor: GLFWmonitor; ramp: ptr GLFWgammaramp) {.cdecl,
    importc: "glfwSetGammaRamp", glfwImport.}
proc defaultWindowHints*() {.cdecl, importc: "glfwDefaultWindowHints",
                             glfwImport.}
proc windowHint*(target: cint; hint: cint) {.cdecl, importc: "glfwWindowHint",
    glfwImport.}
proc createWindow*(width: cint; height: cint; title: cstring;
                   monitor: GLFWmonitor; share: GLFWwindow): GLFWwindow {.
    cdecl, importc: "glfwCreateWindow", glfwImport.}
proc destroyWindow*(window: GLFWwindow) {.cdecl,
    importc: "glfwDestroyWindow", glfwImport.}
proc windowShouldClose*(window: GLFWwindow): cint {.cdecl,
    importc: "glfwWindowShouldClose", glfwImport.}
proc setWindowShouldClose*(window: GLFWwindow; value: cint) {.cdecl,
    importc: "glfwSetWindowShouldClose", glfwImport.}
proc setWindowTitle*(window: GLFWwindow; title: cstring) {.cdecl,
    importc: "glfwSetWindowTitle", glfwImport.}
proc getWindowPos*(window: GLFWwindow; xpos: ptr cint; ypos: ptr cint) {.
    cdecl, importc: "glfwGetWindowPos", glfwImport.}
proc setWindowPos*(window: GLFWwindow; xpos: cint; ypos: cint) {.cdecl,
    importc: "glfwSetWindowPos", glfwImport.}
proc getWindowSize*(window: GLFWwindow; width: ptr cint; height: ptr cint) {.
    cdecl, importc: "glfwGetWindowSize", glfwImport.}
proc setWindowSize*(window: GLFWwindow; width: cint; height: cint) {.
    cdecl, importc: "glfwSetWindowSize", glfwImport.}
proc getFramebufferSize*(window: GLFWwindow; width: ptr cint;
                         height: ptr cint) {.cdecl,
    importc: "glfwGetFramebufferSize", glfwImport.}
proc iconifyWindow*(window: GLFWwindow) {.cdecl,
    importc: "glfwIconifyWindow", glfwImport.}
proc restoreWindow*(window: GLFWwindow) {.cdecl,
    importc: "glfwRestoreWindow", glfwImport.}
proc showWindow*(window: GLFWwindow) {.cdecl, importc: "glfwShowWindow",
    glfwImport.}
proc hideWindow*(window: GLFWwindow) {.cdecl, importc: "glfwHideWindow",
    glfwImport.}
proc getWindowMonitor*(window: GLFWwindow): GLFWmonitor {.cdecl,
    importc: "glfwGetWindowMonitor", glfwImport.}
proc getWindowAttrib*(window: GLFWwindow; attrib: cint): cint {.cdecl,
    importc: "glfwGetWindowAttrib", glfwImport.}
proc setWindowUserPointer*(window: GLFWwindow; pointer: pointer) {.cdecl,
    importc: "glfwSetWindowUserPointer", glfwImport.}
proc getWindowUserPointer*(window: GLFWwindow): pointer {.cdecl,
    importc: "glfwGetWindowUserPointer", glfwImport.}
proc setWindowPosCallback*(window: GLFWwindow; cbfun: GLFWwindowposfun): GLFWwindowposfun {.
    cdecl, importc: "glfwSetWindowPosCallback", glfwImport.}
proc setWindowSizeCallback*(window: GLFWwindow; cbfun: GLFWwindowsizefun): GLFWwindowsizefun {.
    cdecl, importc: "glfwSetWindowSizeCallback", glfwImport.}
proc setWindowCloseCallback*(window: GLFWwindow; cbfun: GLFWwindowclosefun): GLFWwindowclosefun {.
    cdecl, importc: "glfwSetWindowCloseCallback", glfwImport.}
proc setWindowRefreshCallback*(window: GLFWwindow;
                               cbfun: GLFWwindowrefreshfun): GLFWwindowrefreshfun {.
    cdecl, importc: "glfwSetWindowRefreshCallback", glfwImport.}
proc setWindowFocusCallback*(window: GLFWwindow; cbfun: GLFWwindowfocusfun): GLFWwindowfocusfun {.
    cdecl, importc: "glfwSetWindowFocusCallback", glfwImport.}
proc setWindowIconifyCallback*(window: GLFWwindow;
                               cbfun: GLFWwindowiconifyfun): GLFWwindowiconifyfun {.
    cdecl, importc: "glfwSetWindowIconifyCallback", glfwImport.}
proc setFramebufferSizeCallback*(window: GLFWwindow;
                                 cbfun: GLFWframebuffersizefun): GLFWframebuffersizefun {.
    cdecl, importc: "glfwSetFramebufferSizeCallback", glfwImport.}
proc pollEvents*() {.cdecl, importc: "glfwPollEvents", glfwImport.}
proc waitEvents*() {.cdecl, importc: "glfwWaitEvents", glfwImport.}
proc getInputMode*(window: GLFWwindow; mode: cint): cint {.cdecl,
    importc: "glfwGetInputMode", glfwImport.}
proc setInputMode*(window: GLFWwindow; mode: cint; value: cint) {.cdecl,
    importc: "glfwSetInputMode", glfwImport.}
proc getKey*(window: GLFWwindow; key: cint): cint {.cdecl,
    importc: "glfwGetKey", glfwImport.}
proc getMouseButton*(window: GLFWwindow; button: cint): cint {.cdecl,
    importc: "glfwGetMouseButton", glfwImport.}
proc getCursorPos*(window: GLFWwindow; xpos: ptr cdouble;
                   ypos: ptr cdouble) {.cdecl, importc: "glfwGetCursorPos",
    glfwImport.}
proc setCursorPos*(window: GLFWwindow; xpos: cdouble; ypos: cdouble) {.
    cdecl, importc: "glfwSetCursorPos", glfwImport.}
proc setKeyCallback*(window: GLFWwindow; cbfun: GLFWkeyfun): GLFWkeyfun {.
    cdecl, importc: "glfwSetKeyCallback", glfwImport.}
proc setCharCallback*(window: GLFWwindow; cbfun: GLFWcharfun): GLFWcharfun {.
    cdecl, importc: "glfwSetCharCallback", glfwImport.}
proc setMouseButtonCallback*(window: GLFWwindow; cbfun: GLFWmousebuttonfun): GLFWmousebuttonfun {.
    cdecl, importc: "glfwSetMouseButtonCallback", glfwImport.}
proc setCursorPosCallback*(window: GLFWwindow; cbfun: GLFWcursorposfun): GLFWcursorposfun {.
    cdecl, importc: "glfwSetCursorPosCallback", glfwImport.}
proc setCursorEnterCallback*(window: GLFWwindow; cbfun: GLFWcursorenterfun): GLFWcursorenterfun {.
    cdecl, importc: "glfwSetCursorEnterCallback", glfwImport.}
proc setScrollCallback*(window: GLFWwindow; cbfun: GLFWscrollfun): GLFWscrollfun {.
    cdecl, importc: "glfwSetScrollCallback", glfwImport.}
proc joystickPresent*(joy: cint): cint {.cdecl,
    importc: "glfwJoystickPresent", glfwImport.}
proc getJoystickAxes*(joy: cint; count: ptr cint): ptr cfloat {.cdecl,
    importc: "glfwGetJoystickAxes", glfwImport.}
proc getJoystickButtons*(joy: cint; count: ptr cint): ptr cuchar {.cdecl,
    importc: "glfwGetJoystickButtons", glfwImport.}
proc getJoystickName*(joy: cint): cstring {.cdecl,
    importc: "glfwGetJoystickName", glfwImport.}
proc setClipboardString*(window: GLFWwindow; string: cstring) {.cdecl,
    importc: "glfwSetClipboardString", glfwImport.}
proc getClipboardString*(window: GLFWwindow): cstring {.cdecl,
    importc: "glfwGetClipboardString", glfwImport.}
proc getTime*(): cdouble {.cdecl, importc: "glfwGetTime", glfwImport.}
proc setTime*(time: cdouble) {.cdecl, importc: "glfwSetTime", glfwImport.}
proc makeContextCurrent*(window: GLFWwindow) {.cdecl,
    importc: "glfwMakeContextCurrent", glfwImport.}
proc getCurrentContext*(): GLFWwindow {.cdecl,
    importc: "glfwGetCurrentContext", glfwImport.}
proc swapBuffers*(window: GLFWwindow) {.cdecl, importc: "glfwSwapBuffers",
    glfwImport.}
proc swapInterval*(interval: cint) {.cdecl, importc: "glfwSwapInterval",
                                     glfwImport.}
proc extensionSupported*(extension: cstring): cint {.cdecl,
    importc: "glfwExtensionSupported", glfwImport.}
proc getProcAddress*(procname: cstring): GLFWglproc {.cdecl,
    importc: "glfwGetProcAddress", glfwImport.}
